--- a/CapaLogicaNegocio/CapaLogicaNegocio.csproj
+++ b/CapaLogicaNegocio/CapaLogicaNegocio.csproj
@@ -41,7 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CitaLN.cs" />
     <Compile Include="EmpleadoLN.cs" />
+    <Compile Include="EspecialidadLNcs.cs" />
     <Compile Include="HorarioAtencionLN.cs" />
     <Compile Include="MedicoLN.cs" />
     <Compile Include="PacienteLN.cs" />
